--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>logo.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    
+    <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
+    <script type="text/javascript">
+      $webfont.load("body", "bf8318e3c65d4d53b7d68fbcbe9aceff", "PingFangSCB");
+      /*$webfont.load("#id1,.class1,h1", "bf8318e3c65d4d53b7d68fbcbe9aceff", "PingFangSCB");*/
+      /*．．．*/
+      $webfont.draw();
+    </script>
   </head>
   <body>
     <noscript>
